--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -40,7 +40,7 @@ jobs:
               "secret_value": "${{ inputs.secret_value }}"
             }
           relations: "{}"
-          clientId: ${{ secrets.PORT_CLIENT_ID }}
-          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
+          clientId: ${{ secrets.Gw0jJs1nzr50pC4AotjuzQKqHE4Rcp9k }}
+          clientSecret: ${{ secrets.pAdTFPuUVAyAHKqhlvX4GN3HMNndKkFxdYxYOeavAYM4S9eqJIQRtikH4UbCyKW1 }}
           operation: UPSERT
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
