--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           name: ${{ inputs.secret_key }}
           value: ${{ inputs.secret_value }}
-          pa_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          pa_token: ${{ secrets.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 }}
 
       - name: UPSERT Entity
         uses: port-labs/port-github-action@v1
