--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           name: ${{ inputs.secret_key }}
           value: ${{ inputs.secret_value }}
+          pa_token: ${{ secrets.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 }}
+          
           
 
       - name: UPSERT Entity
