--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -21,12 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: gliech/create-github-secret-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           name: ${{ inputs.secret_key }}
           value: ${{ inputs.secret_value }}
-          pa_token: ${{ secrets.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 }}
       - name: UPSERT Entity
         uses: port-labs/port-github-action@v1
         with:
