--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: gliech/create-github-secret-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          pa_token: ${{ secrets.GITHUB_TOKEN }}
           name: ${{ inputs.secret_key }}
           value: ${{ inputs.secret_value }}
       - name: UPSERT Entity
