--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   create_secret:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: gliech/create-github-secret-action@v1
