--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: gliech/create-github-secret-action@v1
         with:
-          pa_token: ${{ secrets.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 }}
+          pa_token: ${{ secrets.GITHUB_TOKEN }}
           name: ${{ inputs.secret_key }}
           value: ${{ inputs.secret_value }}
       - name: UPSERT Entity
