--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -21,11 +21,12 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - uses: gliech/create-github-secret-action@v1
+      - name: Example Step
         with:
           pa_token: ${{ secrets.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 }}
           name: ${{ inputs.secret_key }}
           value: ${{ inputs.secret_value }}
+        
       - name: UPSERT Entity
         uses: port-labs/port-github-action@v1
         with:
