--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -22,10 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Example Step
-        with:
-          pa_token: ${{ secrets.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 }}
-          name: ${{ inputs.secret_key }}
-          value: ${{ inputs.secret_value }}
+        run: echo "My workflow is triggered"
         
       - name: UPSERT Entity
         uses: port-labs/port-github-action@v1
