--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -18,12 +18,14 @@ on:
 
 jobs:
   create_secret:
-    permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - name: Example Step
-        run: echo "My workflow is triggered"
-        
+      - uses: gliech/create-github-secret-action@v1
+        with:
+          name: ${{ inputs.secret_key }}
+          value: ${{ inputs.secret_value }}
+          pa_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
       - name: UPSERT Entity
         uses: port-labs/port-github-action@v1
         with:
@@ -38,7 +40,7 @@ jobs:
               "secret_value": "${{ inputs.secret_value }}"
             }
           relations: "{}"
-          clientId: ${{ secrets.Gw0jJs1nzr50pC4AotjuzQKqHE4Rcp9k }}
-          clientSecret: ${{ secrets.pAdTFPuUVAyAHKqhlvX4GN3HMNndKkFxdYxYOeavAYM4S9eqJIQRtikH4UbCyKW1 }}
+          clientId: ${{ secrets.PORT_CLIENT_ID }}
+          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
           operation: UPSERT
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
