--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -44,3 +44,5 @@ jobs:
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
           operation: UPSERT
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
+          logMessage: |
+            GitHub repository deleted! ✅
