--- a/.github/workflows/create-repo-secret.yml
+++ b/.github/workflows/create-repo-secret.yml
@@ -45,4 +45,4 @@ jobs:
           operation: UPSERT
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
           logMessage: |
-            GitHub repository deleted! ✅
+            GitHub secrets created! ✅
