--- a/.github/workflows/update-pullrequest-count.yml
+++ b/.github/workflows/update-pullrequest-count.yml
@@ -1,20 +1,21 @@
-name: Get Pull Request Count
+name: Count Pull Requests
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'
   workflow_dispatch:
+
 jobs:
-  get-pull-request-count:
+  count-prs:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Get pull request count
-        id: pr_count
-        run: |
-          PR_COUNT=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          "https://api.github.com/repos/${{ github.repository }}/pulls?state=all" | jq '. | length')
-          echo "PR_COUNT=$PR_COUNT" >> $GITHUB_ENV
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
+    - name: Count Pull Requests
+      id: count-prs
+      run: |
+        PR_COUNT=$(gh pr list --json number --jq 'length')
+        echo "::set-output name=pr_count::$PR_COUNT"
+        
+    - name: Print Pull Request Count
+      run: echo "Number of Pull Requests: ${{ steps.count-prs.outputs.pr_count }}"
