--- a/.github/workflows/update-port-pr-count.yml
+++ b/.github/workflows/update-port-pr-count.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: '*/5 * * * *'
   workflow_dispatch:
+
 jobs:
   update-pull-request-count:
     runs-on: ubuntu-latest
@@ -11,6 +12,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Get repository name
+        id: get_repo_name
+        run: |
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
+          echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
 
       - name: Get pull request count
         id: pr_count
@@ -23,13 +30,12 @@ jobs:
         run: |
           echo "Pull Request Count: $PR_COUNT"
           echo "Pull Request Count: ${{ env.PR_COUNT }}"
-          echo "Github Repo Name: ${{ github.repository }}"
 
       - name: Update Port Entity
         uses: port-labs/port-github-action@v1
         with:
           blueprint: "service"
-          identifier: "Loginservice"
+          identifier: ${{ env.REPO_NAME }}
           clientId: ${{ secrets.PORT_CLIENT_ID }}
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
           operation: UPSERT
